--- a/client/index.html
+++ b/client/index.html
@@ -35,6 +35,7 @@
         <script src="./code/app.js">             </script>
         <script src="./code/events.js">          </script>
         <script src="./code/gameElements.js">    </script>
+        <script src="./code/socksAbilities.js">  </script>
         <script src="./code/socks.js">           </script>
 
     </body>
