changed:file structure for methods file. added: BBs display on small card, partially on big.

--- a/client/index.html
+++ b/client/index.html
@@ -28,6 +28,9 @@
         <script src="./code/globalVariables.js"> </script>
         <script src="./code/methodsHelp.js">     </script>
         <script src="./code/methods.js">         </script>
+        <script src="./code/_m.js">              </script>
+        <script src="./code/m_.js">              </script>
+        <script src="./code/_m___m.js">           </script>
         <script src="./code/constructor.js">     </script>
         <script src="./code/cardStitcher.js">    </script>
         <script src="./code/gameCardStitcher.js"></script>
