--- a/client/index.html
+++ b/client/index.html
@@ -30,7 +30,8 @@
         <script src="./code/methods.js">         </script>
         <script src="./code/_m.js">              </script>
         <script src="./code/m_.js">              </script>
-        <script src="./code/_m___m.js">           </script>
+        <script src="./code/_m___m.js">          </script>
+        <script src="./code/defy.js">            </script>
         <script src="./code/constructor.js">     </script>
         <script src="./code/cardStitcher.js">    </script>
         <script src="./code/gameCardStitcher.js"></script>
