bug fixes: roll skill, added: gitignore update.

--- a/client/index.html
+++ b/client/index.html
@@ -11,13 +11,13 @@
         <title>Godtear</title>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.dev.js"></script>
         <link href="https://fonts.googleapis.com/css?family=Cardo&display=swap" rel="stylesheet">
-        <link rel="stylesheet" type="text/css" href="./styles/style.css"/>
-        <link rel="stylesheet" type="text/css" href="./styles/waiterSegment.css"/>
+        <link rel="stylesheet" type="text/css" href="./styles/style.min.css"/>
+        <link rel="stylesheet" type="text/css" href="./styles/waiterSegment.min.css"/>
         <link rel="stylesheet" type="text/css" href="./styles/motion-ui.css"/>
-        <link rel="stylesheet" type="text/css" href="./styles/_logInScreen.css"/>
-        <link rel="stylesheet" type="text/css" href="./styles/__breakPoints.css"/>
-        <link rel="stylesheet" type="text/css" href="./styles/gameCard.css"/>
-        <link rel="stylesheet" type="text/css" href="./styles/gameEffects.css"/>
+        <link rel="stylesheet" type="text/css" href="./styles/_logInScreen.min.css"/>
+        <link rel="stylesheet" type="text/css" href="./styles/__breakPoints.min.css"/>
+        <link rel="stylesheet" type="text/css" href="./styles/gameCard.min.css"/>
+        <link rel="stylesheet" type="text/css" href="./styles/gameEffects.min.css"/>
         <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
     </head>
     <body>
