updated indicator for whose turn it is.

--- a/client/index.html
+++ b/client/index.html
@@ -18,6 +18,7 @@
         <link rel="stylesheet" type="text/css" href="./styles/__breakPoints.min.css"/>
         <link rel="stylesheet" type="text/css" href="./styles/gameCard.min.css"/>
         <link rel="stylesheet" type="text/css" href="./styles/gameEffects.min.css"/>
+        <link rel="stylesheet" type="text/css" href="./styles/cardGlow.min.css"/>
         <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
     </head>
     <body>
