optimised for faster animation, reduced number of elements.

--- a/client/index.html
+++ b/client/index.html
@@ -11,6 +11,7 @@
         <title>Godtear</title>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.dev.js"></script>
         <link href="https://fonts.googleapis.com/css?family=Cardo&display=swap" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="./styles/tileBackGrounds.min.css"/>
         <link rel="stylesheet" type="text/css" href="./styles/style.min.css"/>
         <link rel="stylesheet" type="text/css" href="./styles/waiterSegment.min.css"/>
         <link rel="stylesheet" type="text/css" href="./styles/motion-ui.css"/>
@@ -42,6 +43,6 @@
         <script src="./code/gameElements.js">    </script>
         <script src="./code/socksAbilities.js">  </script>
         <script src="./code/socks.js">           </script>
-
+        <link rel="stylesheet" type="text/css" href="./styles/objGraph.min.css"/>
     </body>
 </html>
