--- a/client/index.html
+++ b/client/index.html
@@ -9,9 +9,10 @@
             integrity='sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU='   crossorigin='anonymous'>
         </script>
         <title>Godtear</title>
+        <meta property="og:description" content="Nasza firma oferuje wynajem spawaczy MIG, MAG, TIG w Czchowie, Gmina Czchów 32-860">
         <meta name="google-site-verification" content="UgS1pqYt76BIW4WbTMHO9eSZmu4VNv--deAMMiqA0jo" />
         <meta name="description" content="Godtear tabletop game, player versus player online multiplayer game. You need  oponent to agree on the same 'place' for your battle to begin. Characters aviable include: Halftusk, Rhodri, Mournblade, Finvarr, Blackjaw, Titus and Grimgut, then Shayle, Nia, Rath Marid and Rattlebone, then Morrigan, Lorsan, Sneaky Peet, Ragnosh and Keera. Play for free.">
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.dev.js"></script>
+        <script src="/socket.io/socket.io.js"></script>
         <link href="https://fonts.googleapis.com/css?family=Cardo&display=swap" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="./styles/tileBackGrounds.min.css"/>
         <link rel="stylesheet" type="text/css" href="./styles/style.min.css"/>
